<resources>
    <string name="app_name">Café suspendu</string>
    <string name="identifiant">Identifiant</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="identifiant1">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="offrir">Offrir</string>
    <string name="reservation">Réservation</string>
    <string name="thankYou">MERCI</string>
    <string name="coffee">Café</string>
    <string name="client">Client</string>
    <string name="choice_text">Choissisez qui vous êtes</string>
    <string name="client_bidder">Client offrant</string>
    <string name="thanksOffer">Merci pour votre geste</string>
    <string name="offer">Offrir</string>
    <string name="connection">Connexion</string>
    <string name="user_name">Identifiant</string>
    <string name="registration">Inscription</string>
    <string name="coffee_totalcoffeeoffer">X cafés suspensud ont été offert dans votre établissement</string>
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="mail">Mail</string>
    <string name="phone">Téléphone</string>
    <string name="number">Numéro</string>
    <string name="promoafter">Promotion après</string>
    <string name="valuepromo">Valeur promo</string>
    <string name="street">Rue</string>
    <string name="coffeeOfferTitle">Café suspendu offert par</string>
    <string name="numberCoffeeOffer">Nombre de café offert :</string>
    <string name="thanksCoffee">Grâce à vous, number de cafés suspendu ont été offerts</string>
    <string name="options">Options</string>
    <string name="confirmatioPassword">Confirmation mot de passe</string>
    <string name="modify">Modifier</string>
    <string name="goBack">Retour</string>
    <string name="thanksClient">Grâce à vous, number sans-abri(s) ont pu béneficier d\'un café suspendu</string>
    <string name="promotion">Promotion</string>
    <string name="history">Historique</string>
    <string name="deleteHistory">Supprimer l\'historique</string>
    <string name="receptionOption">Accueil</string>
    <string name="disconaction">Déconnexion</string>
</resources>
