<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ReceptionCoffeeActivity">

    <item
        android:id="@+id/receptionCoffeeId"
        android:title="@string/receptionOption"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/coffeeId"
        android:title="@string/coffee"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/reservationID"
        android:title="@string/reservation"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/optionscoffee"
        android:title="@string/options"
        app:showAsActioOption="never"
        />
    <item
        android:id="@+id/disconaction"
        android:title="@string/disconaction"
        app:showAsAction="never"
        />
</menu>