<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--android:thumb="@drawable/switch_thumb"/>-->

    <TextView
                android:text="@string/choice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
                android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp" />

    <Button
                android:text="@string/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:id="@+id/registrationButton"
                android:backgroundTint="@color/buttonColor"
                android:textColor="@color/textColorButton"
        android:layout_marginBottom="77dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/inscriptionclient"
        android:id="@+id/registrationImage"
        android:layout_below="@+id/switch3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch3"
        android:textOff="@string/client"
        android:textOn="@string/coffee"
        app:showText="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_toRightOf="@+id/textView14"
        android:layout_toEndOf="@+id/textView14" />
    <!--//android:thumb="@drawable/switch_thumb"
    //android:track="@drawable/switch_bg"/>
//android:track="@drawable/switch_bg"-->


</RelativeLayout>