<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/thanksOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="86dp"
            android:id="@+id/thankYou"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Button
            android:text="@string/offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:id="@+id/buttonOffer" />

        <TextView
            android:text="@string/client_bidder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/userNameBidder"
            android:layout_alignStart="@+id/userNameBidder"
            android:layout_marginTop="69dp" />

        <TextView
            android:text="@string/coffeeOfferTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="33dp"
            android:id="@+id/textView17"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/userNameBidder"
            android:layout_below="@+id/textView2"
            android:layout_alignRight="@+id/thankYou"
            android:layout_alignEnd="@+id/thankYou" />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/userNameBidder"
            android:layout_alignLeft="@+id/userNameBidder"
            android:layout_alignStart="@+id/userNameBidder" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordBidder"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <TextView
            android:text="@string/numberCoffeeOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordBidder"
            android:layout_alignLeft="@+id/passwordBidder"
            android:layout_alignStart="@+id/passwordBidder"
            android:layout_marginTop="22dp"
            android:id="@+id/textView18" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView18"
            android:layout_alignStart="@+id/textView18"
            android:id="@+id/numberCoffeeBidder" />

    </RelativeLayout>
</LinearLayout>