<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.damienjacques.gerant.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_marginBottom="150dp"
        android:id="@+id/editText"
        android:layout_above="@+id/buttonRegistration"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="70dp"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:text="@string/connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonConnexion"
        android:layout_above="@+id/buttonRegistration"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/identifiant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="11dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="47dp" />

    <Button
        android:text="@string/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegistration"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/buttonConnexion"
        android:layout_alignStart="@+id/buttonConnexion" />
</RelativeLayout>
