<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView4" />

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:layout_marginTop="20dp"
            android:id="@+id/textView10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView10"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:id="@+id/editText3" />

        <TextView
            android:text="@string/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:id="@+id/editText5" />

        <TextView
            android:text="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText5"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_below="@+id/editText6"
            android:layout_alignLeft="@+id/editText6"
            android:layout_alignStart="@+id/editText6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_below="@+id/textView13"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13" />

    </RelativeLayout>
</LinearLayout>