<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="24dp"
            android:id="@+id/textView40"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:text="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView40"
            android:layout_alignLeft="@+id/textView40"
            android:layout_alignStart="@+id/textView40"
            android:layout_marginTop="19dp"
            android:id="@+id/textView41" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/textView41"
            android:layout_alignLeft="@+id/textView41"
            android:layout_alignStart="@+id/textView41"
            android:id="@+id/mailOptionClient" />

        <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mailOptionClient"
            android:layout_alignLeft="@+id/mailOptionClient"
            android:layout_alignStart="@+id/mailOptionClient"
            android:id="@+id/textView42" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_below="@+id/textView42"
            android:layout_alignLeft="@+id/textView42"
            android:layout_alignStart="@+id/textView42"
            android:id="@+id/phoneOptionClient" />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneOptionClient"
            android:layout_alignLeft="@+id/phoneOptionClient"
            android:layout_alignStart="@+id/phoneOptionClient"
            android:id="@+id/textView43" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/textView43"
            android:layout_alignLeft="@+id/textView43"
            android:layout_alignStart="@+id/textView43"
            android:id="@+id/passwordOptionClient" />

        <TextView
            android:text="@string/confirmatioPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordOptionClient"
            android:layout_alignLeft="@+id/passwordOptionClient"
            android:layout_alignStart="@+id/passwordOptionClient"
            android:id="@+id/textView44" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/textView44"
            android:layout_alignLeft="@+id/textView44"
            android:layout_alignStart="@+id/textView44"
            android:id="@+id/confirmationPasswordOptionClient" />

        <Button
            android:text="@string/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/confirmationPasswordOptionClient"
            android:layout_alignStart="@+id/confirmationPasswordOptionClient"
            android:layout_marginBottom="59dp"
            android:id="@+id/buttonModifyClientOption" />

        <Button
            android:text="@string/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonModifyClientOption"
            android:layout_toRightOf="@+id/textView44"
            android:layout_toEndOf="@+id/textView44"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/buttonReturnOptionClient" />
    </RelativeLayout>
</LinearLayout>